--- a/CloudAssignmentPart1/cloudassignment_part1/pyproject.toml
+++ b/CloudAssignmentPart1/cloudassignment_part1/pyproject.toml
@@ -15,6 +15,7 @@ long_description = """More details about the app should go here.
 """
 sources = [
     "src/cloudassignment_part1",
+    "src/cloudassignment_part1/services",
 ]
 test_sources = [
     "tests",
